Sending to gordon

--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -321,19 +321,19 @@ For the performance of the custom RBF-FD implementation we refer readers to \cit
 
 
 In the interest of boosting performance of RBF-FD beyond 3 GFLOP/sec, work on the custom OpenCL kernels was suspended in favor of leveraging the SpMV built into the ViennaCL library \cite{Rupp2010, Rupp2010a}.  
-The ViennaCL library advertises itself as an OpenCL library that provides standard data types for linear algebra operations on GPUs and multi-core CPUs \cite{Rupp2010}. The library, written in C++ templates, abstracts the GPU behind an API for both dense and sparse linear algebra, iterative krylov solvers, matrix preconditioners, etc. Auto-tuned OpenCL kernels simplify targeting the GPU and allow developers to focus on prototyping applications rather than optimizing their own low-level matrix multiply kernels \cite{Rupp2010a}. 
+The ViennaCL library advertises itself as an OpenCL library that provides standard data types for linear algebra operations on GPUs and multi-core CPUs \cite{Rupp2010}. The library, written in C++ templates, abstracts the GPU behind an API for both dense and sparse linear algebra, iterative krylov solvers, matrix preconditioners, etc. Auto-tuned OpenCL kernels simplify targeting the GPU and allow developers to focus on prototyping applications rather than optimizing their own low-level kernels \cite{Rupp2010a}. 
 The API is structured following existing programming and interface conventions from the Boost::uBLAS library, a CPU-only linear algebra library (\cite{BoostSite}). In fact, the ViennaCL and Boost::uBLAS APIs are directly compatible, and many ViennaCL algorithms (e.g., iterative solvers, preconditioners, etc.) can be applied to Boost::uBLAS data structures. Similar interoperability exists between ViennaCL and the EIGEN and MTL libraries. 
 
-In an interesting twist, the most recent version of ViennaCL (v1.4.2) also supports multiple parallel back-ends that allow one to target different parallel architectures with the same API. Back-end options include OpenCL, CUDA, and OpenMP. 
+In an interesting twist, the most recent version of ViennaCL (v1.4.2) also supports multiple parallel back-ends that allow one to target different parallel architectures with the same API. Back-end options include OpenCL, CUDA, and OpenMP. Our work focuses solely on the OpenCL back-end.
 
-We have integrated the ViennaCL library into the RBF-FD GPU project (\cite{BolligRBFFDCode}), and attempt to use the API whenever possible. When work started with ViennaCL two things were apparent: a) the library is incredibly powerful but it was limited to square matrices; and b) there was no support multiple GPUs. Since the library is open source, we joined the project as developers and made a number of contributions to the main codebase that add support for rectangular matrices, a matrix preconditioner, a number of bugfixes, and hopefully soon, our multi-GPU algorithms with overlapping communication and computation presented in Chapter~\ref{chap:multigpu_rbffd}.
+We have integrated the ViennaCL library into the RBF-FD GPU project (\cite{BolligRBFFDCode}), and attempt to use the API whenever possible. Two things were apparent when we started working with ViennaCL: a) the library is incredibly powerful but it was limited to square matrices; and b) there was no support multiple GPUs. Since the library is open source, we joined the project as developers and made a number of contributions to the main codebase that add support for rectangular matrices, a matrix preconditioner, a number of bugfixes, and soon: our multi-GPU algorithms with overlapping communication and computation presented in Chapter~\ref{chap:multigpu_rbffd}.
 
-As a testament to the functionality of the ViennaCL library and its utility within the RBF-FD GPU project, we note that the PETSc project (\cite{petsc-web-page}) recently integrated the library into its codebase. PETSc originally leveraged the CUDA-only library, CUSP (\cite{Cusp2012}), to internally offload matrix computations to NVidia GPUs \cite{Minden2010}. However, with the functional portability of OpenCL and the new ViennaCL back-ends, the PETSc can transparently target parallel architectures across all vendors. 
+As a testament to the functionality of the ViennaCL library and its utility within the RBF-FD GPU project, we note that the PETSc project (\cite{petsc-web-page}) recently integrated the library into its codebase. PETSc originally leveraged the CUDA-only library, CUSP (\cite{Cusp2012}), to internally offload matrix computations to NVidia GPUs \cite{Minden2010}. However, with the functional portability of OpenCL and the new ViennaCL back-ends, PETSc is now able to transparently target parallel architectures across all vendors. In turn, investigations like \cite{Yokota2010,Yokota2012}, which depend on PETSc, likewise gain that ability. 
 
 ViennaCL supports a number of sparse formats similar to \cite{Bell2009,Cusp2012}. Due to the low operational intensity in the SpMV operation, the best way to boost performance is to increase compression on the sparse matrix. To this end we consider the performance of three ViennaCL formats shown in Figure~\ref{fig:sparse_format}: 
 \begin{itemize} 
 \item \emph{Coordinate Matrix (COO)} -- The sparse matrix is compressed to three arrays of equal length. The first array stores all nonzero weights from the matrix contiguous by row. The second and third arrays store the row and column indices (resp.) for each nonzero element. For a mesh of $N$ nodes and RBF-FD stencil size $n$ this format requires $(3*N*n)$ storage. 
-\item \emph{Compressed Row Storage (CSR)} -- Similar to COO, the matrix is stored in three arrays. All $N*n$ nonzero weights are stored in the first array. In the second array $N$ integers indicate the offset (into the first array) to get to the first nonzero of each row. Finally, the $N*n$ column indices for each nonzero are stored in the third array. This format requires a total of $(2*(n+1)*N)$ storage.
+\item \emph{Compressed Row Storage (CSR)} -- Similar to COO, the matrix is stored in three arrays. All $N*n$ nonzero weights are stored in the first array. In the second array, $N$ integers indicate the offset (into the first array) to get to the first nonzero of each row. Finally, the $N*n$ column indices for each nonzero are stored in the third array. This format requires a total of $(2*(n+1)*N)$ storage.
 \item \emph{ELLPACK (ELL)} -- The matrix is assumed to have exactly $m$ nonzeros per row. Then the matrix is compressed to two arrays, each of size $N*m$, that contain only the matrix nonzeros and the column indices. If a row has less than $m$ nonzeros then zeros are used to pad up to the required number of nonzeros. However, based on the assumption that all RBF-FD stencils will have equal size, we have $m=n$ and the format is a good fit for the problem. ELL requires a total of $(2*N*n)$ storage. 
 \end{itemize}
 %COO and CSR matrices are convenient for problems that have variable number of nonzeros per row. However, the extra storage means that 
