--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -473,7 +473,7 @@ The Xeon Phi hardware on Cascade has 60 cores, each the equivalent of a Pentium 
 
 The card has a theoretical maximum bandwidth of 320 GB/s and double precision peak performance of 1011 GFLOP/sec \cite{IntelXeonPhi2013}. The significantly higher bandwidth on the Xeon Phi leads to the expectation that the new architecture should easily outperform NVidia GPUs on SpMV. 
 
-In early 2013, Intel released a beta OpenCL driver for the Xeon Phi. In light of this we were able to repeat our ViennaCL benchmarks on the new hardware. The resulting data, presented in Figure~\ref{fig:gflops_cascade_intel_phi} \emph{should only be considered preliminary}.  The figure is provided for comparison with Figures~\ref{fig:gflops_cascade_m2070} and \ref{fig:gflops_cascade_k20}. The most obvious issue with Figure~\ref{fig:gflops_cascade_intel_phi} is that every single test case on the Xeon Phi demonstrates substantially lower performance than on NVidia GPUs. We suspect that the low performance is due in part to the beta status of the OpenCL driver. Another concern is that the ViennaCL SpMV kernels were written for NVidia hardware and it is known that OpenCL does not guarantee performance portability. 
+In early 2013, Intel released a beta OpenCL driver for the Xeon Phi. In light of this we were able to repeat our ViennaCL benchmarks on the new hardware. The resulting data, presented in Figure~\ref{fig:gflops_cascade_intel_phi} \emph{should only be considered preliminary}.  The figure is provided for comparison with Figures~\ref{fig:gflops_cascade_m2070} and \ref{fig:gflops_cascade_k20}, and the most obvious issue within Figure~\ref{fig:gflops_cascade_intel_phi} is that every single test case on the Xeon Phi demonstrates substantially lower performance than on NVidia GPUs. We suspect that the low performance is due in part to the beta status of the OpenCL driver. Another concern is that the ViennaCL SpMV kernels were written for NVidia hardware and it is known that OpenCL does not guarantee performance portability. 
 
 As our investigation into the Xeon Phi continues, the benchmarks will be reassessed on upcoming releases of the OpenCL drivers, and we may consider implementing a set of Xeon Phi specific kernels as another ViennaCL back-end. 
 
@@ -523,7 +523,7 @@ Note there is still room to improve the SpMV performance, in addition to a few o
 \begin{itemize} 
 \item 
 It has come to our attention that the HPC market today appears to favor NVidia for GPU computing. %For example, the majority of clusters world-wide contain NVidia accelerators. The CUDA C/C++ compiler was open-sourced in the Spring of 2012 as an LLVM compiler, which allows other languages to directly interface with the GPU without the need for wrappers (see e.g., \cite{NumbaPro}). 
-Also, the lack of support for numerous hardware features in OpenCL leads to the belief that we will likely focus on CUDA kernels as we continue into the future. 
+That, combined with the lack of support for numerous hardware features in OpenCL, leads to the belief that we will focus on CUDA kernels as we continue into the future. 
 %As we proceed into the future effort will likely focus on CUDA kernels. 
 
 \item We are aware that a number of additional sparse formats exist such as the Hybrid ELL plus CSR (HYB) format \cite{Bell2009}, Diagonal (DIAG) and Jagged Diagonal (JAD) variants \cite{LiSaad2010}, and a number of variants on the ELL format that improve cache use by operating in blocks (BELL), slices (SELL), or both (SBELL) \cite{SuKeutzer2012}. It remains to be seen how these formats can impact performance for RBF-FD. 
